# RemoteUnwinder-PoC

./: .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: dlfcn_ex.cpp  dlfcn_ex.h  dylib.hpp  helpers.h  main.cpp
app/src/main/java/xyz/mufanc/remoteunwinder/: MainActivity.kt  RemoteService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
